--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,yarn,vscode,git,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,yarn,vscode,git,linux
-
+.env
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
