--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start:prod": "node dist/index",
     "start:dev": "ts-node-dev src/index.ts",
-    "pretty": "npx prettier --write src/*"
+    "pretty": "npx prettier --write src/*",
+    "check": "npx prettier --write src/* && npx eslint --fix src/*"
   },
   "dependencies": {
     "@types/passport-facebook": "^2.1.10",
