--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0"
   },
@@ -30,6 +31,7 @@
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "@types/passport": "^1.0.6",
+    "@types/passport-github2": "^1.2.4",
     "@types/passport-google-oauth": "^1.0.41",
     "@types/passport-google-oauth20": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
