--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:prod": "node dist/index",
     "start:dev": "ts-node-dev src/index.ts",
     "pretty": "npx prettier --write src/*",
-    "check": "npx prettier --write src/* && npx eslint --fix src/*"
+    "check": "npx prettier --write src/* && npx eslint --fix src/*",
+    "clean": "rm -rf ./dist/* "
   },
   "dependencies": {
     "@types/passport-facebook": "^2.1.10",
